--- a/CheckSoftwareIsInstalled/CheckSoftwareIsInstalled.csproj
+++ b/CheckSoftwareIsInstalled/CheckSoftwareIsInstalled.csproj
@@ -2,9 +2,10 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ApplicationIcon>magnify.ico</ApplicationIcon>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
